# 410

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
docs/: presentation.html  presentation.pptx  report.md
shaders/: bone_debug.frag  bone_debug.vert  grid.frag  grid.vert  skinned.frag  skinned.vert
src/: Animator.cpp  Animator.h  App.cpp  App.h  Camera.cpp  Camera.h  GltfLoader.cpp  GltfLoader.h  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp
src/ui/: DebugUI.cpp  DebugUI.h
